[gd_scene load_steps=4 format=3 uid="uid://d2fsoufj0kmm8"]

[ext_resource type="Script" path="res://Scenes/Martian/Martian.gd" id="1_kv0l7"]
[ext_resource type="Texture2D" uid="uid://dbomtony23ifs" path="res://Sprites/martian-1.png.png" id="1_xucss"]
[ext_resource type="Script" path="res://Scenes/Martian/Martian_Area2D.gd" id="3_arsr1"]

[node name="Martian" type="CharacterBody2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 8
collision_mask = 0
script = ExtResource("1_kv0l7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xucss")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-10, -8, -5, -5, 7, -5, 10, -8, 9, 5, 7, 7, -6, 7, -9, 4, -9, -2)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("3_arsr1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-10, -8, -5, -5, 7, -5, 10, -8, 9, 5, 7, 7, -6, 7, -9, 4, -9, -2)

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
